# jobsuche-mcp-server

./: .gitignore  .markdownlint.json  .npmignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Cargo-dev.toml  Cargo.toml  LICENSE  PUBLISHING.md  README.md  init.sh  package.json  requirements-dev.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  npm-publish.yml
jobsuche-mcp-server/: Cargo.toml
jobsuche-mcp-server/src/: config.rs  lib.rs  main.rs
npm/: .npmignore  index.js  install.js  package.json  run.js  uninstall.js
platform-packages/darwin-arm64/: index.js  package.json
platform-packages/darwin-x64/: package.json
platform-packages/linux-x64/: package.json
platform-packages/win32-x64/: index.js  package.json
scripts/: postinstall.js  prepare-dist.js  test-integration.js  validate.sh
template-mcp-server/: Cargo.toml
template-mcp-server/src/: lib.rs  main.rs
