# Development version using local paths
# Copy this to Cargo.toml when developing with local framework

[workspace]
members = [
    "jobsuche-mcp-server"
]
resolver = "2"

[workspace.dependencies]
# Core dependencies for MCP servers
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
async-trait = "0.1"
rand = "0.9"

# PulseEngine MCP Framework - Published v0.11.0
pulseengine-mcp-server = { version = "0.13.0", features = ["stdio-logging"] }
pulseengine-mcp-macros = { version = "0.11.0" }
pulseengine-mcp-protocol = { version = "0.11.0" }
pulseengine-mcp-transport = { version = "0.11.0" }
