[package]
name = "jobsuche-mcp-server"
version = "0.2.0"
edition = "2021"
description = "AI-friendly job search integration server using the German Federal Employment Agency API"
license = "MIT"
authors = ["Jobsuche MCP Team <team@wunderfrucht.com>"]
repository = "https://github.com/wunderfrucht/jobsuche-mcp-server"
keywords = ["mcp", "job-search", "germany", "jobs", "api"]

[[bin]]
name = "jobsuche-mcp-server"
path = "src/main.rs"

[lib]
name = "jobsuche_mcp_server"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
pulseengine-mcp-server = { workspace = true }
pulseengine-mcp-macros = { workspace = true }
pulseengine-mcp-protocol = { workspace = true }
pulseengine-mcp-transport = { workspace = true }
schemars = "1.0"

# Jobsuche API client
jobsuche = { version = "0.3.0", features = ["async"] }

[dev-dependencies]
serial_test = "3.2"
