[package]
name = "template-mcp-server"
version = "0.2.0"
edition = "2021"
description = "A template MCP server using PulseEngine MCP framework"
license = "MIT"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/yourusername/your-mcp-server"
keywords = ["mcp", "model-context-protocol", "server", "template"]

[[bin]]
name = "template-mcp-server"
path = "src/main.rs"

[lib]
name = "template_mcp_server"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
pulseengine-mcp-server = { workspace = true }
pulseengine-mcp-macros = { workspace = true }
pulseengine-mcp-protocol = { workspace = true }
pulseengine-mcp-transport = { workspace = true }
rand = "0.9"
schemars = "1.0"
